# cannoli

./: .gitignore  .gitmodules  AI_DISCLOSURE.md  CNAME  LICENSE  README.md  Taskfile.yml  build.gradle.kts  credits.json  gradle.properties  settings.gradle.kts  taskfile.yml
.github/: CHANGELOG.md
.github/ISSUE_TEMPLATE/: core-mapping.yml
.github/workflows/: release.yml  sync-core-info.yml  update-manifest.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: arcade_map.txt  controller_blacklist.json  ignore_extensions_roms.txt  ignore_files_roms.txt  platforms.json  romm_platforms.json
app/src/main/assets/input/: controller_hints.json
app/src/main/assets/kitchen/: index.html
app/src/main/assets/kitchen/assets/: index-5rnruOCu.js  index-BJnjMths.js  index-BNmLgg9k.js  index-BYUdR7wc.js  index-C10pmspE.css  index-D5iGWSR0.css  index-DEs6xWg9.js  index-DbYqq3bx.js  index-DkDP4Ou6.js  index-YMWl557s.css  index-anRdHuDZ.css  index-yf6cSqrQ.css
app/src/main/assets/shaders/crt-cannoli/: crt-cannoli-lite.glslp  (+1 more)
app/src/main/cpp/: CMakeLists.txt  cheat_engine.cpp  cheat_engine.h  libretro.h  libretro_bridge.cpp  native_audio.cpp  native_audio.h  ra_integration.c  slang_transpiler.cpp  vulkan_jni.cpp  vulkan_renderer.cpp  vulkan_renderer.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
cannoli-core/: build.gradle.kts
cannoli-igm/: build.gradle.kts
cannoli-ui/: build.gradle.kts
cannoli-ui/src/main/res/values/: strings.xml
config/detekt/: detekt.yml
docs/superpowers/specs/: 2026-04-03-diy-mode-design.md
gradle/: libs.versions.toml
licenses/: OFL-1.1.txt  ZLIB.txt
licenses/cores/: handy-ZLIB.txt  mednafen-vb-GPLv2.txt  mgba-MPLv2.txt  swanstation-GPLv3.txt
licenses/fonts/: mplus1code-OFL.txt
licenses/libraries/: zxing-APACHE2.txt
licenses/shaders/: crt-aperture-GPL.txt  crt-cannoli-GPL.txt  crt-geom-GPLv2.txt  crt-lottes-fast-PUBLIC-DOMAIN.txt  dot-PUBLIC-DOMAIN.txt  zfast-crt-GPLv2.txt
scripts/: fetch-autoconfig.sh  generate_test_data.sh  sync_credits.py
(+664 files in other folders)
